Fix padding issues on mobile devices

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -2,19 +2,37 @@
 
 .Dashboard {
   @extend %container;
-  nav {
-    padding: $space-6 0;
-    li {
-      padding: 0;
-    }
-    p {
-      font-weight: 500;
-      padding: 0;
-    }
-    button {
-      padding: 0;
-      margin: 0;
-      height: $space-3;
+
+  .NavBar {
+    padding: 0 $space-1;
+    nav {
+      padding: $space-6 0;
+      li {
+        padding: 0;
+      }
+      p {
+        font-weight: 500;
+        padding: 0;
+      }
+      button {
+        padding: 0;
+        margin: 0;
+        height: $space-3;
+      }
     }
   }
+}
+
+@media screen and (max-width: 800px) {
+    .Dashboard {
+      margin-top: 5rem;
+
+      .NavBar {
+        padding: 0 $space-7;
+
+        nav {
+          padding: $space-8 0;
+        }
+      }
+    }
 }
